# curso_agno_asimov_academy

./: .env-example  .gitignore  0.llm_call.py  1.1.researcher.py  1.2.analista.py  1.3.own_tools.py  1.4.analista.py  1.5.analista.py  1.6.analista_atualizado.py  pyproject.toml  test_agent.py
01_deploy/: exemplo1.py  exemplo2.py  exemplo3.py  exemplo4.py
aula3/: exemplo1.py  exemplo2.py
tmp/: agent.db
